---------------------------------- 2022-03-07 06:41:13
no todo: update gtp stack to the latest standards, add to dataplanes
todo: update gtp stack to the latest standards
---------------------------------- 2022-03-08 16:56:26
qc pass: sdwan over ipv4
qc pass: sdwan over ipv6
---------------------------------- 2022-03-10 06:14:25
qc pass: sdwan with fixed addresses
qc pass: sdwan hub and spoke
---------------------------------- 2022-03-11 07:56:22
no todo: tcp window scale
---------------------------------- 2022-03-11 09:59:39
qc pass: secondary dns server
qc pass: sdwan with mixed addresses
---------------------------------- 2022-03-21 22:08:40
no qc pass: ppp address propagation
failed: ppp address propagation
---------------------------------- 2022-03-21 22:44:12
no failed: ppp address propagation
qc pass: ppp address propagation
---------------------------------- 2022-03-22 05:33:09
todo: incremental fib calculation from bgp change list
---------------------------------- 2022-03-28 14:51:21
no todo: trustpoint for certificates
---------------------------------- 2022-03-29 13:09:15
no todo: incremental fib calculation from bgp change list
---------------------------------- 2022-03-29 13:48:35
todo: aliases with sticky parameters
todo: disableable door code in temper
---------------------------------- 2022-03-30 04:34:50 22.3.30
todo: lsrp pvrp forbid remote dynamic metric
todo: changelog converter with start point
---------------------------------- 2022-03-30 07:02:48 22.3.30
no todo: lsrp pvrp forbid remote dynamic metric
---------------------------------- 2022-03-30 07:59:57 22.3.30
no todo: changelog converter with start point
---------------------------------- 2022-03-30 08:45:44 22.3.30
no todo: aliases with sticky parameters
---------------------------------- 2022-03-30 08:58:47 22.3.30
todo: default playlist in player
---------------------------------- 2022-03-30 10:07:16 22.3.30
no todo: default playlist in player