@@ -12,7 +12,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v22.3.30-cur, done by cs@nop.<br/>
-tested: 2022-03-30 10:15:21, took 00:08:05, with 80 workers, on 2780 cases, 0 failed, 0 traces, 2 retries<br/>
+tested: 2022-03-30 11:04:11, took 00:08:41, with 80 workers, on 2780 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
